--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "symfony/security-bundle": "~3.2",
         "symfony/form": "~3.0",
         "symfony/translation": "~2.8|3.0.*",
-        "symfony/config": "~2.8|3.0.*"
+        "symfony/config": "~2.8|3.0.*",
+        "twig/extensions": "~1.4",
+        "symfony/validator": "~2.8|3.0.*"
 
     },
     "autoload": {
